// store protocol
// gateway <-> store

syntax = "proto3";

package faas;

import "kv.proto";

service Store {
    rpc Get (StoreGetRequest) returns (StoreGetResponse) {}
    rpc Put (StorePutRequest) returns (StorePutResponse) {}
    rpc Modify (StoreModifyRequest) returns (StoreModifyResponse) {}
    rpc Del (StoreDelRequest) returns (StoreDelResponse) {}
    rpc DelAll (StoreDelRequest) returns (StoreDelResponse) {}
    rpc Keys (StoreKeysRequest) returns (StoreKeysResponse) {}
}

message StoreGetRequest {
    string namespace = 1;
    string key = 2;
}

message StoreGetResponse {
    Entity entity = 1;
}

message StorePutRequest {
    string namespace = 1;
    string key = 2;
    Entity entity = 3;
}

message StorePutResponse {
    bool successful = 1;
}

message StoreModifyRequest {
    string namespace = 1;
    string key = 2;
    repeated Filter filters = 3;
    repeated Update updates = 4;
}

message StoreModifyResponse {
    bool successful = 1;
    Entity entity = 2;
}

message StoreDelRequest {
    string namespace = 1;
    string key = 2;
}

message StoreDelResponse {
    bool successful = 1;
}

message StoreKeysRequest {}

message StoreKeysResponse {
    repeated string keys = 1;
}
